--- a/MmmDemo/Agents/AddNewAgent.xaml
+++ b/MmmDemo/Agents/AddNewAgent.xaml
@@ -1,4 +1,4 @@
-﻿<Window xmlns:my="clr-namespace:sadlDemo"  x:Class="sadlDemo.AddNewAgent"
+﻿<Window xmlns:my="clr-namespace:MmmDemo"  x:Class="MmmDemo.AddNewAgent"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Add New Agent" Height="1225" Width="690">
