--- a/MmmDemo/Agents/ViewAgent.xaml
+++ b/MmmDemo/Agents/ViewAgent.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="sadlDemo.Agents.ViewAgent"
+﻿<Window x:Class="MmmDemo.Agents.ViewAgent"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
