--- a/MmmDemo/Clients/EditClient.xaml
+++ b/MmmDemo/Clients/EditClient.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="sadlDemo.Clients.EditClient"
+﻿<Window x:Class="MmmDemo.Clients.EditClient"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:sys="clr-namespace:System;assembly=mscorlib"
