--- a/MmmDemo/Clients/EditClientDetails.xaml
+++ b/MmmDemo/Clients/EditClientDetails.xaml
@@ -1,4 +1,4 @@
-﻿<Window xmlns:my="clr-namespace:sadlDemo.Clients"  x:Class="sadlDemo.Clients.EditClientDetails"
+﻿<Window xmlns:my="clr-namespace:MmmDemo.Clients"  x:Class="MmmDemo.Clients.EditClientDetails"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Edit Client Details" Height="819" Width="995"  Background="#FF256D25">
