--- a/MmmDemo/Clients/SearchClient.xaml
+++ b/MmmDemo/Clients/SearchClient.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="sadlDemo.Clients.SearchClient"
+﻿<UserControl x:Class="MmmDemo.Clients.SearchClient"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
