--- a/MmmDemo/Employees/EditEmployee.xaml
+++ b/MmmDemo/Employees/EditEmployee.xaml
@@ -1,4 +1,4 @@
-﻿<Window xmlns:my="clr-namespace:sadlDemo.Employees"  x:Class="sadlDemo.Employees.EditEmployee"
+﻿<Window xmlns:my="clr-namespace:MmmDemo.Employees"  x:Class="MmmDemo.Employees.EditEmployee"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="EditEmployee"  Height="819" Width="995"  Background="#FF256D25">
