--- a/MmmDemo/Employees/EditEmployeeDetails.xaml
+++ b/MmmDemo/Employees/EditEmployeeDetails.xaml
@@ -1,4 +1,4 @@
-﻿<Window xmlns:my="clr-namespace:sadlDemo.Employees"  x:Class="sadlDemo.Employees.EditEmployeeDetails"
+﻿<Window xmlns:my="clr-namespace:MmmDemo.Employees"  x:Class="MmmDemo.Employees.EditEmployeeDetails"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Edit Employee Details"   Height="819" Width="995"  Background="#FF256D25">
