--- a/MmmDemo/Agents/AgentInfo.xaml
+++ b/MmmDemo/Agents/AgentInfo.xaml
@@ -5,15 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="1157" d:DesignWidth="662">
-    <UserControl.Resources>
-
+    <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/MmmStyles;component/CommonStyle.xaml" />
+                <ResourceDictionary Source="/MmmStyles;component/CommonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-
-    </UserControl.Resources>
+    </Window.Resources>
     <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <DockPanel  Background="#FF256D25" LastChildFill="True">
             <UniformGrid Columns="2">
