--- a/MmmDemo/Agents/SearchAgent.xaml
+++ b/MmmDemo/Agents/SearchAgent.xaml
@@ -7,25 +7,13 @@
              DataContext="{Binding RelativeSource={RelativeSource Self}}"
              mc:Ignorable="d" 
              d:DesignHeight="422" d:DesignWidth="691" Background="#FF256D25">
-    <UserControl.Resources>
-        <Style x:Key="ControlBtnStyle" TargetType="Button">
-            <Setter Property="Background">
-                <Setter.Value>
-                    <RadialGradientBrush>
-                        <GradientStop Color="Green" Offset="0" />
-                        <GradientStop Color="#FFE0C375" Offset="1" />
-                    </RadialGradientBrush>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="Foreground" Value="#FFE9F9DE" />
-            <Setter Property="FontSize" Value="20" />
-            <Setter Property="FontWeight" Value="Bold" />
-            <Setter Property="BorderBrush" Value="#FF3DC43D" />
-            <Setter Property="Width" Value="300" />
-            <Setter Property="Height" Value="100" />
-            <Setter Property="OpacityMask" Value="White" />
-        </Style>
-    </UserControl.Resources>
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/MmmStyles;component/CommonStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <DockPanel LastChildFill="True">
         <Button Width="200" Height="60" DockPanel.Dock="Top" Name="viewAllAgentBtn" Click="viewAllAgentBtn_Click" Style="{StaticResource ControlBtnStyle}" >View All Agents</Button>
         <ListView  Background="#FF256D25" Name="agentListView" Foreground="Black" DockPanel.Dock="Bottom" MouseDoubleClick="agentListView_MouseDoubleClick"  ItemsSource="{Binding agentCollection}">
