--- a/MmmDemo/Clients/ClientInfo.xaml
+++ b/MmmDemo/Clients/ClientInfo.xaml
@@ -5,39 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
               d:DesignHeight="1516" d:DesignWidth="661">
-    <UserControl.Resources>
-        <Style x:Key="datePickerStyle" TargetType="DatePicker">
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="Margin" Value="10"/>
-        </Style>
-        <Style x:Key="labelStyle" TargetType="Label">
-            <Setter Property="Foreground" Value="#FFE9F9DE" />
-            <Setter Property="FontSize" Value="16" />
-            <Setter Property="FontWeight" Value="Bold" />
-            <Setter Property="Height" Value="40" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="Margin" Value="10"/>
-        </Style>
-        <Style x:Key="textboxStyle" TargetType="TextBox">
-            <Setter Property="Foreground" Value="Black" />
-            <Setter Property="FontSize" Value="16" />
-            <Setter Property="FontWeight" Value="Bold" />
-            <Setter Property="Height" Value="40" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="Margin" Value="10"/>
-        </Style>
-        <Style x:Key="comboboxStyle" TargetType="ComboBox">
-            <Setter Property="Foreground" Value="Black" />
-            <Setter Property="FontSize" Value="16" />
-            <Setter Property="FontWeight" Value="Bold" />
-            <Setter Property="Height" Value="40" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="HorizontalContentAlignment" Value="Center" />
-            <Setter Property="Margin" Value="10"/>
-            <Setter Property="SelectedIndex" Value="0"/>
-        </Style>
-
-    </UserControl.Resources>
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/MmmStyles;component/CommonStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <DockPanel  Background="#FF256D25" LastChildFill="True">
             <UniformGrid Columns="2">
