--- a/MmmDemo/Employees/EmployeeInfo.xaml
+++ b/MmmDemo/Employees/EmployeeInfo.xaml
@@ -5,13 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
             d:DesignHeight="1157" d:DesignWidth="662" >
-    <Window.Resources>
+    <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/MmmStyles;component/CommonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Window.Resources>
+    </UserControl.Resources>
     <ScrollViewer>
         <DockPanel Background="#FF256D25" LastChildFill="True">
             <UniformGrid Columns="2">
