--- a/code/MmmDemo/Agents/AddNewAgent.xaml
+++ b/code/MmmDemo/Agents/AddNewAgent.xaml
@@ -5,7 +5,7 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/MmmStyles;component/CommonStyle.xaml" />
+                <ResourceDictionary Source="/MmmStyle;component/CommonStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
