--- a/code/MmmDemo/Employees/SearchEmployee.xaml
+++ b/code/MmmDemo/Employees/SearchEmployee.xaml
@@ -10,7 +10,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/MmmStyles;component/CommonStyle.xaml"/>
+                <ResourceDictionary Source="/MmmStyle;component/CommonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
